# ripsync

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MANUAL_SUBMISSIONS.md  PROMOTION-POSTS.md  README.md  REDDIT-POSTS-AUTHENTIC.md  RELEASE-v1.2.0-STATUS.md  RELEASE-v1.2.0.md  SECURITY.md  bench-results.csv  deny.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: apt.yml  ci.yml  docs.yml  release.yml
crates/ferry/: Cargo.toml
crates/ferry-cli/: Cargo.toml
crates/ferry-cli/src/: main.rs  reporter.rs  tui.rs
crates/ferry-cli/tests/: cli.rs  parity.proptest-regressions
crates/ferry-core/: Cargo.toml
crates/ferry-core/benches/: delta_bench.rs
crates/ferry-core/src/: apply.rs  checksum.rs  copy.rs  delta.rs  error.rs  index.rs  lib.rs  meta.rs  plan.rs  report.rs  verify.rs  walk.rs
crates/ferry-core/src/io/: mod.rs  uring.rs
crates/ferry-core/tests/: control_verify.rs  delta_proptest.rs
crates/ferry/src/: args.rs  main.rs  reporter.rs  tui.rs
crates/ferry/tests/: cli.rs  parity.rs
crates/ripsync/: Cargo.toml
crates/ripsync-core/: Cargo.toml
crates/ripsync-core/benches/: delta_bench.rs
crates/ripsync-core/src/: apply.rs  checksum.rs  control.rs  copy.rs  delta.rs  error.rs  filter.rs  index.rs  lib.rs  meta.rs  plan.rs  report.rs  tune.rs  verify.rs  walk.rs
crates/ripsync-core/src/io/: macos.rs  mod.rs  uring.rs  windows.rs
crates/ripsync-core/src/net/: mod.rs  proto.rs  receiver.rs  sender.rs  server.rs  transport.rs
crates/ripsync-core/src/util/: aligned_buf.rs  mod.rs
crates/ripsync-core/tests/: control_verify.rs  delta_proptest.rs  net_pipe.rs
crates/ripsync/src/: args.rs  config.rs  lib.rs  main.rs  remote.rs  reporter.rs  rs.rs  tui.rs  watch.rs
crates/ripsync/tests/: cli.rs  parity.rs  remote_cli.rs
docs/: SUMMARY.md  architecture.md  book.toml  config.md  contributing.md  demo.tape  filters.md  install.md  introduction.md  performance.md  quick-start.md  release-1.2.0-checklist.md  releasing.md  remote.md  safety.md  tui.md  verification.md  watch.md
docs/assets/: README.md
packaging/apt/: README.md  publish.sh
packaging/aur/: README.md
packaging/aur/ripsync/: .SRCINFO  PKGBUILD
packaging/aur/ripsync-bin/: .SRCINFO  PKGBUILD
packaging/deb/: build.sh
packaging/scoop/: ripsync.json
packaging/winget/: README.md  beeboyd.ripsync.installer.yaml  beeboyd.ripsync.locale.en-US.yaml  beeboyd.ripsync.yaml
scripts/: bench.py  bench.sh  summarize_bench.py
xtask/: Cargo.toml
xtask/src/: main.rs
