[workspace]
resolver = "2"
members = ["crates/ferry-core", "crates/ferry"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Ferry contributors"]
repository = "https://github.com/ferry-sync/ferry"
rust-version = "1.85"

[workspace.dependencies]
blake3 = "1.5"
jwalk = "0.8"
rayon = "1.10"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
globset = "0.4"
tempfile = "3"
assert_cmd = "2"
proptest = "1"
criterion = "0.5"
filetime = "0.2"
rand = "0.8"
num_cpus = "1"
reflink-copy = "0.1"
rustix = { version = "1", features = ["fs"] }
bincode = "1"
xattr = "1"
mimalloc = "0.1"
io-uring = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
