[workspace]
resolver = "2"
members = ["crates/ripsync-core", "crates/ripsync", "xtask"]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["ripsync contributors"]
repository = "https://github.com/beeboyd/ripsync"
homepage = "https://github.com/beeboyd/ripsync"
keywords = ["rsync", "sync", "backup", "filesystem", "cli"]
categories = ["filesystem", "command-line-utilities"]
rust-version = "1.85"

[workspace.dependencies]
blake3 = { version = "1.5", features = ["mmap", "rayon"] }
jwalk = "0.8"
rayon = "1.10"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
ratatui = "0.29"
crossterm = "0.28"
globset = "0.4"
tempfile = "3"
assert_cmd = "2"
proptest = "1"
criterion = "0.5"
filetime = "0.2"
rand = "0.8"
num_cpus = "1"
reflink-copy = "0.1"
foldhash = "0.1"
rustix = { version = "1", features = ["fs", "process"] }
bincode = "1"
xattr = "1"
mimalloc = "0.1"
io-uring = "0.6"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
# Keep unwinding: the RAII terminal guard and the io_uring / Windows-handle Drop
# cleanups must run on panic. Do NOT switch to panic = "abort".
panic = "unwind"
