[package]
name = "ferry-core"
description = "Core sync logic for Ferry: delta engine, parallel walk, plan/apply."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
jwalk.workspace = true
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
globset.workspace = true
filetime.workspace = true
rand.workspace = true
num_cpus.workspace = true
reflink-copy.workspace = true
bincode.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true
xattr.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "delta_bench"
harness = false
