[package]
name = "ferry"
description = "Ferry: a fast, memory-safe rsync alternative."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ferry"
path = "src/main.rs"

[dependencies]
ferry-core = { path = "../ferry-core" }
anyhow.workspace = true
globset.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
num_cpus.workspace = true
mimalloc.workspace = true

[features]
# Use the system allocator instead of mimalloc.
system-malloc = []

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
predicates = "3"
proptest.workspace = true
blake3.workspace = true
filetime.workspace = true
xattr.workspace = true
