[package]
name = "ripsync-core"
description = "Core sync logic for ripsync: delta engine, parallel walk, plan/apply."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
jwalk.workspace = true
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
globset.workspace = true
filetime.workspace = true
rand.workspace = true
num_cpus.workspace = true
reflink-copy.workspace = true
bincode.workspace = true

[features]
default = ["io-uring"]
# Linux io_uring batched-I/O backend (no effect off Linux).
io-uring = []

[target.'cfg(unix)'.dependencies]
rustix.workspace = true
xattr.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
io-uring.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "delta_bench"
harness = false
