[package]
name = "ripsync"
description = "ripsync: a fast, memory-safe rsync alternative."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ripsync"
path = "src/main.rs"

# Opt-in short alias `rs` (same entry point). NOT built by default because the
# name collides with the BSD `rs` reshape utility; packagers enable it only
# where it is safe. Build with: `cargo build --features rs-alias`.
[[bin]]
name = "rs"
path = "src/rs.rs"
required-features = ["rs-alias"]

[dependencies]
ripsync-core = { path = "../ripsync-core" }
anyhow.workspace = true
globset.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
num_cpus.workspace = true
mimalloc = { workspace = true, optional = true }

[features]
default = ["mimalloc"]
# mimalloc global allocator (on by default; speeds up the alloc-heavy walk).
mimalloc = ["dep:mimalloc"]
# Use the system allocator instead of mimalloc. Combine with
# `--no-default-features` to drop the mimalloc dependency entirely.
system-malloc = []
# Build the opt-in `rs` short-alias binary (see [[bin]] above).
rs-alias = []

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
predicates = "3"
proptest.workspace = true
blake3.workspace = true
filetime.workspace = true

# `xattr` is POSIX-only (its Windows stub does not compile); the xattr test is
# `#[cfg(unix)]`.
[target.'cfg(unix)'.dev-dependencies]
xattr.workspace = true
